@@ -6,6 +6,8 @@ import java.net.URI;
 import java.net.URISyntaxException;
 import java.nio.file.Files;
 import java.nio.file.Paths;
+import java.time.LocalDate;
+import java.time.format.DateTimeFormatter;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
@@ -35,7 +37,7 @@ import org.springframework.util.StringUtils;
  * <li>{@code io.spring.docresources}
  * </ul>
  * <li>设置所有的警告都是致命的.
- * <li> AsciidoctorJ 版本更新为 2.4.3.
+ * <li> AsciidoctorJ 版本更新为 2.5.7.
  * <li>创建一个 {@code asciidoctorExtensions} configuration.
  * <li>对于每个 {@link AsciidoctorTask}:
  * <ul>
@@ -62,8 +64,6 @@ import org.springframework.util.StringUtils;
  */
 public class AsciidoctorConventionsPlugin implements Plugin<Project> {
 
-    private static final String ASCIIDOCTORJ_VERSION = "2.5.7";
-
     public static final String EXTENSIONS_CONFIGURATION_NAME = "asciidoctorExtensions";
 
     @Override
@@ -71,9 +71,9 @@ public class AsciidoctorConventionsPlugin implements Plugin<Project> {
         project.getPlugins().withType(AsciidoctorJPlugin.class,(asciidoctorJPlugin -> {
             configureDocumentationDependenciesRepository(project);
             makeAllWarningsFatal(project);
-            upgradeAsciidoctorJVersion(project);
             createAsciidoctorExtensionsConfiguration(project);
             createAsciidoctorPdfTask(project);
+            createAsciidoctorMultiPageTask(project);
             configurationAsciidoctorTask(project);
         }));
     }
@@ -91,6 +91,15 @@ public class AsciidoctorConventionsPlugin implements Plugin<Project> {
                 mavenContent.includeGroup("io.spring.docresources");
             });
         }));
+        project.getRepositories().mavenCentral();
+//        project.getRepositories().maven((mavenArtifactRepository) -> {
+//            mavenArtifactRepository.setUrl(URI.create("https://packages.aliyun.com/maven/repository/2114765-snapshot-6mT705/"));
+//            mavenArtifactRepository.credentials(repository -> {
+//                repository.setUsername(System.getenv("ALIYUN_USERNAME"));
+//                repository.setPassword(System.getenv("ALIYUN_PASSWORD"));
+//            });
+//            mavenArtifactRepository.setAllowInsecureProtocol(true);
+//        });
     }
 
     /**
@@ -99,47 +108,36 @@ public class AsciidoctorConventionsPlugin implements Plugin<Project> {
      */
     private void configurationAsciidoctorTask(Project project) {
         project.getTasks().withType(AsciidoctorTask.class,(asciidoctorTask) -> {
+            asciidoctorTask.setGroup("documentation");
             asciidoctorTask.configurations(EXTENSIONS_CONFIGURATION_NAME);
+            // 设置属性
             configureCommonAttributes(project,asciidoctorTask);
             configureOptions(asciidoctorTask);
             asciidoctorTask.baseDirFollowsSourceDir();
+
+            // 设置 asciidoctor 和 asciidoctorPdf sources 为 index.singleadoc
+            if(asciidoctorTask.getName().equals("asciidoctor") || asciidoctorTask.getName().equals("asciidoctorPdf")) {
+                asciidoctorTask.sources("index.singleadoc");
+            }
+
+            if(asciidoctorTask.getName().equals("asciidoctorMultiPage")) {
+                asciidoctorTask.sources("*.adoc");
+            }
+
             createSyncDocumentationSourceTask(project,asciidoctorTask);
             boolean pdf = asciidoctorTask.getName().toLowerCase().contains("pdf");
-            if(!pdf) {
-                replaceLogo(project,asciidoctorTask);
-            }
             String backend = (!pdf) ? "spring-html" : "spring-pdf";
             asciidoctorTask.outputOptions(outputOptions -> outputOptions.backends(backend));
         });
     }
 
     /**
-     * 替换 spring logo 为自己的 logo.
-     * @param project project
-     * @param asciidoctorTask asciidoctorTask
-     */
-    private void replaceLogo(Project project, AsciidoctorTask asciidoctorTask) {
-        asciidoctorTask.doLast((replaceLogo) -> {
-            try {
-
-                String language = asciidoctorTask.getLanguages().contains("zh-cn") ? "/zh-cn" : "";
-                project.delete(project.getBuildDir() + "/docs/asciidoc/" + language + "/img/banner-logo.svg");
-                Files.copy(Objects.requireNonNull(this.getClass().getResourceAsStream("/data/images/banner-logo.svg")),
-                        Paths.get(project.getBuildDir() + "/docs/asciidoc/" + language + "/img/banner-logo.svg"));
-            }
-            catch (IOException e) {
-                throw new RuntimeException(e);
-            }
-        });
-
-    }
-
-    /**
      * 复制源文件
-     * @param project project
+     *
+     * @param project         project
      * @param asciidoctorTask asciidoctorTask
      */
-    private Sync createSyncDocumentationSourceTask(Project project, AsciidoctorTask asciidoctorTask) {
+    private void createSyncDocumentationSourceTask(Project project, AsciidoctorTask asciidoctorTask) {
         Sync syncDocumentationSource = project.getTasks()
                 .create("syncDocumentationSourceFor" + StringUtils.capitalize(asciidoctorTask.getName()), Sync.class);
         File syncSource = new File(project.getBuildDir(),"docs/src/" + asciidoctorTask.getName());
@@ -176,7 +174,6 @@ public class AsciidoctorConventionsPlugin implements Plugin<Project> {
         asciidoctorTask.getInputs().dir(syncSource).withPathSensitivity(PathSensitivity.RELATIVE)
                 .withPropertyName("synced source");
         asciidoctorTask.setSourceDir(project.relativePath(new File(syncSource,"asciidoc/")));
-        return syncDocumentationSource;
     }
 
     /**
@@ -185,6 +182,9 @@ public class AsciidoctorConventionsPlugin implements Plugin<Project> {
      */
     private void configureOptions(AsciidoctorTask asciidoctorTask) {
         asciidoctorTask.options(Collections.singletonMap("doctype","book"));
+        asciidoctorTask.forkOptions(fork -> {
+            fork.jvmArgs("--add-opens","java.base/sun.nio.ch=ALL-UNNAMED","--add-opens","java.base/java.io=ALL-UNNAMED");
+        });
         asciidoctorTask.setLogDocuments(true);
     }
 
@@ -195,6 +195,15 @@ public class AsciidoctorConventionsPlugin implements Plugin<Project> {
      */
     private void configureCommonAttributes(Project project, AsciidoctorTask asciidoctorTask) {
         Map<String, Object> attributes = new HashMap<>();
+        // https://docs.asciidoctor.org/asciidoc/latest/attributes/document-attributes-ref/
+        // 文档元数据
+        attributes.put("author", "Author：Jcohy");
+        attributes.put("email","Email：jia_chao23@126.com");
+        attributes.put("revnumber", attributes.get("revnumber") != null ? attributes.get("version"): project.getVersion());
+        attributes.put("revdate", DateTimeFormatter.ofPattern("yyyy-MM-dd").format(LocalDate.now()));
+        attributes.put("revremark", "");
+
+        // 章节，标题和目录属性
         attributes.put("idprefix", "");
         attributes.put("idseparator", "-");
         attributes.put("toc", "left");
@@ -203,14 +212,22 @@ public class AsciidoctorConventionsPlugin implements Plugin<Project> {
         attributes.put("numbered", "");
         attributes.put("source-indent", 0);
         attributes.put("sectanchors", "");
-        attributes.put("icons", "font");
         attributes.put("hide-uri-scheme", "font");
         attributes.put("allow-uri-read", true);
-        attributes.put("version",attributes.get("version") != null ? attributes.get("version"): project.getVersion());
-        attributes.put("revnumber", attributes.get("revnumber") != null ? attributes.get("version"): project.getVersion());
         attributes.put("docinfo", "shared,private");
-        attributes.put("attribute-missing", "warn");
 
+        // Image and icon attributes
+        attributes.put("icons", "font");
+
+        // Compliance attributes
+//        attributes.put("attribute-missing", "warn");
+
+        // Custom attributes
+        attributes.put("version",attributes.get("version") != null ? attributes.get("version"): project.getVersion());
+        attributes.put("image-resource", project.getBuildDir() + "/docs/src/"+ asciidoctorTask.getName() + "/images");
+        attributes.put("docs-java", project.getProjectDir() + "/src/main/java");
+        attributes.put("docs-kotlin", project.getProjectDir() + "/src/main/kotlin");
+        attributes.put("docs-groovy", project.getProjectDir() + "/src/main/groovy");
         attributes.put("docs-url", "https://docs.jcohy.com");
         attributes.put("resource-url", "https://resources.jcohy.com");
         attributes.put("software-url", "https://software.jcohy.com");
@@ -225,18 +242,22 @@ public class AsciidoctorConventionsPlugin implements Plugin<Project> {
      */
     private void createAsciidoctorPdfTask(Project project) {
         project.getTasks().register("asciidoctorPdf", AsciidoctorTask.class,(asciidoctorPdf -> {
-            asciidoctorPdf.sources("index.adoc");
             // 添加属性，解决 PDF 中文乱码问题
             try {
                 Map<String,Object> attributes = new HashMap<>();
                 attributes.put("pdf-fontsdir", Objects.requireNonNull(this.getClass().getResource("/data/fonts")).toURI());
-                attributes.put("pdf-stylesdir", Objects.requireNonNull(this.getClass().getResource("/data/themes")).toURI());
-                attributes.put("pdf-style","Chinese");
+                attributes.put("pdf-themesdir", Objects.requireNonNull(this.getClass().getResource("/data/themes")).toURI());
+                attributes.put("pdf-theme","Chinese");
                 asciidoctorPdf.attributes(attributes);
             }
             catch (URISyntaxException e) {
                 throw new RuntimeException(e);
             }
+        }));
+    }
+
+    private void createAsciidoctorMultiPageTask(Project project) {
+        project.getTasks().register("asciidoctorMultiPage", AsciidoctorTask.class,(asciidoctorMultiPage -> {
         }));
     }
 
@@ -252,20 +273,13 @@ public class AsciidoctorConventionsPlugin implements Plugin<Project> {
                    .all(configuration::extendsFrom);
            // 添加 spring-asciidoctor-backends 依赖
            configuration.getDependencies().add(project.getDependencies()
-                   .create("io.spring.asciidoctor.backends:spring-asciidoctor-backends:0.0.4"));
+                   .create(AsciidoctorVersion.SPRING_ASCIIDOCTOR_BACKENDS));
             // 添加 asciidoctorj-pdf 依赖
             configuration.getDependencies().add(project.getDependencies()
-                    .create("org.asciidoctor:asciidoctorj-pdf:2.3.0"));
+                    .create(AsciidoctorVersion.ASCIIDOCTORJ_PDF));
+            configuration.getDependencies().add(project.getDependencies()
+                    .create(AsciidoctorVersion.ASCIIDOCTORJ));
         });
-    }
-
-    /**
-     * 升级版本 {@code ASCIIDOCTORJ_VERSION}
-     * @param project project
-     */
-    private void upgradeAsciidoctorJVersion(Project project) {
-        project.getExtensions().getByType(AsciidoctorJExtension.class).setVersion(ASCIIDOCTORJ_VERSION);
-
     }
 
     /**
